--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
     <div class="catalogo-container" id="catalogo-container">
       <div class="catalogo-grid">
           <div class="card">
-            <img src="<?= htmlspecialchars($auto['url_img']) ?>" 
-                 alt="<?= htmlspecialchars($auto['marca'] . ' ' . $auto['modelo']) ?>">
+            <img src="" alt="">
             <div class="card-body">
               <h3></h3>
               <p>Tipo:</p>
