--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <div class="catalogo-container" id="catalogo-container">
       <div class="catalogo-grid">
           <div class="card">
-            <img src="" alt="">
+            <img src="" 
+            alt="">
             <div class="card-body">
               <h3></h3>
               <p>Tipo:</p>
@@ -56,15 +57,5 @@
     <p>&copy; 2025 Loz-Autos | Diseñado por Destch-Compani & Equipo</p>
     <p><a href="#inicio">Volver arriba</a></p>
   </footer>
-
-  <script>
-    document.getElementById("ver-mas").addEventListener("click", function() {
-      const container = document.getElementById("catalogo-container");
-      container.style.maxHeight = "none";
-      container.style.overflow = "visible";
-      container.classList.remove("catalogo-container");
-      this.style.display = "none";
-    });
-  </script>
 </body>
 </html>
