--- a/index.html
+++ b/index.html
@@ -57,5 +57,15 @@
     <p>&copy; 2025 Loz-Autos | Diseñado por Destch-Compani & Equipo</p>
     <p><a href="#inicio">Volver arriba</a></p>
   </footer>
+  
+  <script>
+    document.getElementById("ver-mas").addEventListener("click", function() {
+      const container = document.getElementById("catalogo-container");
+      container.style.maxHeight = "none";
+      container.style.overflow = "visible";
+      container.classList.remove("catalogo-container");
+      this.style.display = "none";
+    });
+  </script>
 </body>
 </html>
