--- a/index.html
+++ b/index.html
@@ -35,17 +35,54 @@
             <img src="" 
             alt="">
             <div class="card-body">
-              <h3></h3>
-              <p>Tipo:</p>
-              <p>Color:</p>
-              <p>Año:</p>
-              <p>Precio:</p>
-              <p>Estado:</p>
+              <h3>Toyota Hilux</h3>
+              <p>Tipo: Hatchback</p>
+              <p>Color: Negro</p>
+              <p>Año: 2025</p>
+              <p>Precio: $19,368.41</p>
+              <p>Estado: Nuevo</p>
               <form method="POST" style="margin-top:10px;">
-                <input type="hidden" name="id_auto" value="<?= $auto['id_auto'] ?>">
+                <input type="hidden" name="id_auto" value="2">
                 <button type="submit" name="comprar">Comprar</button>
               </form>
             </div>
+            <div class="card-body">
+              <h3>Toyota RAV4</h3>
+              <p>Tipo: SUV</p>
+              <p>Color: Azul</p>
+              <p>Año: 2020</p>
+              <p>Precio: $53,417.46</p>
+              <p>Estado: Nuevo</p>
+              <form method="POST" style="margin-top:10px;">
+                <input type="hidden" name="id_auto" value="3">
+                <button type="submit" name="comprar">Comprar</button>
+              </form>
+            </div>
+            <div class="card-body">
+              <h3>Ford EcoSport</h3>
+              <p>Tipo: SUV</p>
+              <p>Color: Gris</p>
+              <p>Año: 2010</p>
+              <p>Precio: $39,745.03</p>
+              <p>Estado: Usado</p>
+              <form method="POST" style="margin-top:10px;">
+                <input type="hidden" name="id_auto" value="4">
+                <button type="submit" name="comprar">Comprar</button>
+              </form>
+            </div>
+            <div class="card-body">
+              <h3>Toyota Yaris</h3>
+              <p>Tipo: SUV</p>
+              <p>Color: Azul</p>
+              <p>Año: 2015</p>
+              <p>Precio: $60,484.54</p>
+              <p>Estado: Nuevo</p>
+              <form method="POST" style="margin-top:10px;">
+                <input type="hidden" name="id_auto" value="5">
+                <button type="submit" name="comprar">Comprar</button>
+              </form>
+            </div>
+                                                
           </div>
       </div>
     </div>
