--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <ul>
         <li><a href="#inicio">Inicio</a></li>
         <li><a href="#catalogo">Catálogo</a></li>
-        <li><a href="classes/ingreso.php">Agregar Auto</a></li>
+        <li><a href="ingreso.html">Agregar Auto</a></li>
       </ul>
     </nav>
   </header>
