--- a/ingreso.html
+++ b/ingreso.html
@@ -13,7 +13,7 @@
     <h1>Loz-Autos</h1>
     <nav>
       <ul>
-        <li><a href="../index.php">Inicio</a></li>
+        <li><a href="index.html">Inicio</a></li>
       </ul>
     </nav>
   </header>
