Upload del slogan
Agregué un signo de rayo al slogan además de que lo cambié un poco

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- INICIO -->
   <section id="inicio">
     <h2>Bienvenido a "Loz-Autos"</h2>
-    <p>Tu concesionaria de confianza en compra y venta de autos usados. Calidad, garantía y el mejor precio para vos.</p>
+    <p>Tu concesionaria de confianza en compra y venta de autos usados. Calidad y velocidad en el mismo lugar ⚡</p>
   </section>
 
   <!-- CATALOGO -->
